# Swift-ly

./: .env.example  .gitattributes  .gitignore  Makefile  alembic.ini  docker-compose.yml  init_db.sql  pyproject.toml  requirements-dev.txt  requirements.txt  test.db
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  dependencies.py  main.py  worker.py
app/core/: rate_limit.py
app/models/: __init__.py  url.py  user.py
app/routers/: analytics.py  auth.py  health.py  urls.py
app/schemas/: __init__.py  auth.py  common.py  url.py
app/services/: auth_service.py  url_service.py
docker/: Dockerfile
docker/nginx/: nginx.conf
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/[code]/analytics/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/analytics/: clicks-area-chart.tsx  device-pie-chart.tsx  stat-cards.tsx  top-countries-table.tsx
frontend/components/dashboard/: sidebar-nav.tsx  url-table.tsx
frontend/components/landing/: hero-section.tsx  shorten-form.tsx
frontend/components/layout/: footer.tsx  navbar.tsx
frontend/hooks/: use-analytics.ts  use-shorten.ts  use-urls.ts
frontend/types/: index.ts
tests/: conftest.py  test_api.py  test_auth.py  test_url_service.py
